--- a/police/policeman/trafficPolice/addDriverFine.html
+++ b/police/policeman/trafficPolice/addDriverFine.html
@@ -56,7 +56,7 @@
                     <form action="#" id="form" class="form">
                         <!--Fine No will be auto incremented at Database-->
                         <!--FineType will be taken from the session-->
-                        <!--UserID should be dynamically generated with JS based on fineType-->
+                        <!--UserID HTML input should be dynamically generated with JS based on fineType-->
                         <div class="form-control">
                             <label for="user_id"></label>
                             <input type="text" placeholder="" id="user_id" />
