--- a/police/policeman/trafficPolice/addDriverFine.html
+++ b/police/policeman/trafficPolice/addDriverFine.html
@@ -79,7 +79,7 @@
                         <!--Date and Time will be set by server-->
                         <!--Relevent police_id and police_station will be retrieved from the session-->
                         <!--Fine amount will be retrieved using offenceNumber-->
-                        <!--Paymentstatus will be set as pending by default in database-->
+                        <!--Paymentstatus will be set as unpaid by default in database-->
                         <button id="button">Submit</button>
                     </form>
                 </div>
