link js to addFine html

--- a/police/policeman/trafficPolice/addFine.html
+++ b/police/policeman/trafficPolice/addFine.html
@@ -66,6 +66,6 @@
               </div>
         </div>
 
-    <script src="../../resources/js/police/oic/policeman.js"></script>
+    <script src="/resources/js/police/policeman/trafficPolice/addFine.js"></script>
 </body>
 </html>
