--- a/police/policeman/trafficPolice/addFine.html
+++ b/police/policeman/trafficPolice/addFine.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="card">
                     <a href="/police/policeman/trafficPolice/addPedestrianFine.html" id="pedestrianFine">
-                        <h2>Pedestrianr</h2>
+                        <h2>Pedestrian</h2>
                 </div>
                 <div class="card">
                     <a href="/police/policeman/trafficPolice/addVehicleFine.html" id="vehicleFine">
