--- a/police/login.html
+++ b/police/login.html
@@ -25,23 +25,27 @@
     </div>
 
     <div class="wrapper">
-        <form class="login" id="form">
-          <p class="title">Log in</p>
-          <div class="form-control">
-            <input type="text" id="username" placeholder="Username" autofocus />
-            <i class="fa fa-user"></i>
-            <small>Error message</small>
-          </div>
-          <div class="form-control">
-            <input type="password" id="password" placeholder="Password" />
-            <i class="fa fa-key"></i>
-            <small>Error message</small>
-          </div>
-          <!-- <a href="#">Forgot your password?</a> -->
-          <button id="button">Log in
-          </button>
-        </form>
-      </div>
+      <form class="login" id="form">
+        <p class="title">Log in</p>
+        <div class="form-control">
+          <input type="text" id="username" placeholder="Username" autofocus />
+          <i class="fa fa-user"></i>
+          <small>Error message</small>
+        </div>
+        <div class="form-control">
+          <input type="password" id="password" placeholder="Password" />
+          <i class="fa fa-key"></i>
+          <small>Error message</small>
+        </div>
+        <!-- <a href="#">Forgot your password?</a> -->
+        <button id="button">Log in
+        </button>
+      </form>
+    </div>
+
+    <div>
+      <footer>Copy Rights Resereved</footer>
+    </div>
       <script src="../resources/js/police/login.js"></script>
 </body>
 </html>
