--- a/police/login.html
+++ b/police/login.html
@@ -19,9 +19,7 @@
                 <b>National Traffic Spot Fine System</b>
             </h2>
         </div>
-
-        <a href="../../common/profile/index.html">
-        </a>
+        <div class="emptyDiv"></div>
     </div>
 
     <div class="container">
@@ -46,7 +44,9 @@
         </form>
       </div>
     </div>
-    <footer>Copy Rights Resereved</footer>
+    <footer>
+        <p class="footerText">Copyright © 2023 Sri Lanka Police. All Rights Reserved. Design & Developed by CS13</p>
+    </footer>
 
       <script src="../resources/js/police/login.js"></script>
 </body>
