add border shadow

--- a/police/igp/viewPoliceman.html
+++ b/police/igp/viewPoliceman.html
@@ -45,7 +45,7 @@
     <div class="dashboard-heading">
         <div class="panel">
             <div ng-app="app" ng-controller="coin">
-                <p class="btc-price">Suraif Muhammad</p>
+                <p class="btc-price" id="user_name"></p>
             </div>
         </div>
     
