add border radius to header and footer

--- a/police/login.html
+++ b/police/login.html
@@ -45,7 +45,7 @@
       </div>
     </div>
     <footer>
-        <p class="footerText">Copyright © 2023 Sri Lanka Police. All Rights Reserved. Design & Developed by CS13</p>
+    Copyright © 2023 Sri Lanka Police. All Rights Reserved. Design & Developed by CS13
     </footer>
 
       <script src="../resources/js/police/login.js"></script>
