View fines done completely

--- a/user_service/index.html
+++ b/user_service/index.html
@@ -38,9 +38,9 @@
                   <button class="main">User Dashboard</button></a>
             <div class="clear"></div>
             <ul class="menu">
-                  <a href="./index.html">
+                  <!-- <a href="./index.html">
                         <button class="main">User Dashboard</button></a>
-                  <div class="clear"></div>
+                  <div class="clear"></div> -->
                   <ul class="menu">
                         <a href="./user/fines/index.html">
                               <i class="fa-solid fa-file-invoice"></i>
