--- a/police/igp/viewPoliceman.html
+++ b/police/igp/viewPoliceman.html
@@ -80,12 +80,15 @@
 
         <!-- Model to popup Are you sure want to delete?? -->
 
-        <div id="myModal" class="modal">
-            <div class="modal-content">
-              <span class="close"></span>
-              <p>Are you sure you want to delete ?</p>
-              <button id="modal-yes">Yes</button>
-              <button id="modal-no">No</button>
+        <div id="myModel" class="model">
+            <div class="model-content">
+                <span class="close"></span>
+                <p>Are you sure you want to delete ?</p>
+                <br>
+                <div class="model-options">
+                    <button id="model-yes" class="model-button">Yes</button>
+                    <button id="model-no" class="model-button">No</button>
+                </div>
             </div>
         </div>
     </div>
