create common model template

--- a/police/igp/viewPoliceman.html
+++ b/police/igp/viewPoliceman.html
@@ -82,8 +82,7 @@
 
         <div id="myModel" class="model">
             <div class="model-content">
-                <span class="close"></span>
-                <p>Are you sure you want to delete ?</p>
+                <p class="model-question">Are you sure you want to delete ?</p>
                 <br>
                 <div class="model-options">
                     <button id="model-yes" class="model-button">Yes</button>
