--- a/police/igp/viewPoliceman.html
+++ b/police/igp/viewPoliceman.html
@@ -51,11 +51,12 @@
     <!-- Dashbboard cards -->
         <div class="all">
             <a href="../igp/addPoliceman.html" class="buttonSection">
-                <button id="addPoliceman" class="addButton"><i class="fa-sharp fa-solid fa-person-circle-plus fa-2xl" style="color: #0eabfa;"></i></button>
+                <button id="addPoliceman" class="addButton"><i class="fa-sharp fa-solid fa-person-circle-plus fa-2xl" style="color: #14abfa;"></i></button>
             </a>
             <div class="container">
                 <h1>Policeman Information</h1>
                 <div class="tableSection">
+                    <br>
                     <table class="rwd-table" id="table">
                         <tbody>
                           <div class="tableheading">
