--- a/police/igp/viewPoliceman.html
+++ b/police/igp/viewPoliceman.html
@@ -24,7 +24,7 @@
         <div class="side-bar-list">
             <button class="dashboard-button">IGP Dashboard</button>
             <div class="menu">
-                <a href="../igp/viewPoliceman.html" style="color:red">
+                <a href="../igp/viewPoliceman.html" style="color: #14abfa;">
                     <i class="fa fa-dashboard"></i>
                     Policeman
                 </a>
@@ -84,7 +84,6 @@
         <div id="myModel" class="model">
             <div class="model-content">
                 <p class="model-question">Are you sure you want to delete ?</p>
-                <br>
                 <div class="model-options">
                     <button id="model-yes" class="model-button">Yes</button>
                     <button id="model-no" class="model-button">No</button>
