change .all height to 94 from 100

--- a/police/igp/addPoliceman.html
+++ b/police/igp/addPoliceman.html
@@ -52,9 +52,7 @@
     <!-- Dashbboard cards -->
         <div class="all">
             <div class="container">
-                <div class="formHeader">
-                    <h2>Add Policeman</h2>
-                </div>
+                <h2 class="form-header">Add Policeman</h2>
                 <form action="#" id="form" class="form">
                     <div class="form-control">
                         <label for="name">Name</label>
