--- a/police/igp/addPoliceman.html
+++ b/police/igp/addPoliceman.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/resources/css/user-interface.css">
     <link rel="stylesheet" href="/resources/css/form.css">
+    <link rel="stylesheet" href="/resources/css/message.css">
     <link rel="stylesheet" href="../../resources/css/police/igp/addPoliceman.css">
     <link rel="stylesheet" href="https://kit.fontawesome.com/251590f28b.css" crossorigin="anonymous">
     <link rel="stylesheet"
