--- a/user-side/user/login/index.html
+++ b/user-side/user/login/index.html
@@ -10,6 +10,8 @@
           href="../resources/css/police/login.css"> -->
     <link rel="stylesheet"
           href="../../resources/css/login.css">
+    <!-- <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"> -->
     <title>NTSF</title>
     <script type="module"
             src="./script.js"
@@ -45,6 +47,9 @@
                    id="password"
                    placeholder="Password" />
             <i class="fa fa-key"></i><br>
+            <!-- <i class="far fa-eye"
+               id="togglePassword"
+               style="margin-right: -30px; cursor: pointer;"></i> -->
             <a href="#">Forgot your password?</a><br><br>
             Don't have an account? <a href="../signup/index.html">Sign Up</a>
             <button id="submit-btn"
