Change signup-btn as submit-btn

--- a/user-side/user/signup/index.html
+++ b/user-side/user/signup/index.html
@@ -61,7 +61,7 @@
             <i class="fa-solid fa-key"></i><br>
             <!-- <a href="#">Forgot your password?</a><br><br> -->
             Already have an account? <a href="../login/index.html">Login</a>
-            <button id="signup-btn"
+            <button id="submit-btn"
                     onclick="submitSignup()">
                 <i class="spinner"></i>
                 <span class="state">Sign Up</span>
