Add script tag in html which is used to indicate that script.js uses ECMAScript modules

--- a/user-side/user/signup/index.html
+++ b/user-side/user/signup/index.html
@@ -11,6 +11,8 @@
     <!-- <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"> -->
     <title>NTSF</title>
+    <script type="module"
+            src="./script.js"></script>
 </head>
 
 <body>
@@ -68,8 +70,6 @@
             </button>
         </form>
     </div>
-
-    <script src="./script.js"></script>
 </body>
 
 </html>
