--- a/user-side/user/login/index.html
+++ b/user-side/user/login/index.html
@@ -13,9 +13,9 @@
     <!-- <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"> -->
     <title>NTSF</title>
+    <!-- JavaScript code in script.js uses ECMAScript modules -->
     <script type="module"
-            src="./script.js"
-            ;></script>
+            src="./script.js"></script>
 </head>
 
 <body>
