--- a/user-side/user/login/index.html
+++ b/user-side/user/login/index.html
@@ -36,8 +36,10 @@
 
     <div class="wrapper">
         <form class="login"
-              onkeypress="validateLoginForm()">
-            <p class="title">Login</p>
+              id="login-form"
+              oninput="validateLoginForm()">
+            <p class="
+              title">Login</p>
             <input type="text"
                    id="nic"
                    placeholder="NIC"
@@ -53,6 +55,7 @@
             <a href="#">Forgot your password?</a><br><br>
             Don't have an account? <a href="../signup/index.html">Sign Up</a>
             <button id="submit-btn"
+                    disabled
                     onclick="submitLogin()">
                 <i class="spinner"></i>
                 <span class="state">Log In</span>
