Add oninput instead of onkeypress, make submit-btn disabled

--- a/user-side/user/signup/index.html
+++ b/user-side/user/signup/index.html
@@ -35,7 +35,7 @@
     <div class="wrapper">
         <form id="signup-form"
               class="sign-up"
-              onkeypress="validateSignUpForm()">
+              oninput="validateSignUpForm()">
             <p class="title">Sign Up</p>
             <input type="text"
                    id="nic"
@@ -64,6 +64,7 @@
             <!-- <a href="#">Forgot your password?</a><br><br> -->
             Already have an account? <a href="../login/index.html">Login</a>
             <button id="submit-btn"
+                    disabled
                     onclick="submitSignup()">
                 <i class="spinner"></i>
                 <span class="state">Sign Up</span>
