--- a/user-side/user/complaint/add/index.html
+++ b/user-side/user/complaint/add/index.html
@@ -9,8 +9,8 @@
           content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"
           href="../../../resources/css/add.css">
-    <link rel="stylesheet"
-          href="../../../../resources/css/form.css">
+    <!-- <link rel="stylesheet"
+          href="../../../../resources/css/form.css"> -->
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet"
@@ -20,7 +20,8 @@
     <link rel="icon"
           type="image/x-icon"
           href="/resources/icons/favicon.ico">
-    <script src="./script.js"></script>
+    <script type="module"
+            src="./script1.js"></script>
 
 </head>
 
@@ -99,7 +100,8 @@
                 </div>
                 <form action="#"
                       id="form"
-                      class="form">
+                      class="form"
+                      oninput="validateComplaintForm()">
                     <div class="form-control">
                         <label for="title">Title</label>
                         <input type="text"
@@ -118,7 +120,8 @@
                         <i class="fas fa-exclamation-circle"></i>
                         <small>Error message</small>
                     </div>
-                    <button id="add-complaint-button"
+                    <button id="submit-btn"
+                            disabled
                             onclick="addComplaint()">Submit</button>
                     <button id="cancel-button">Cancel</button>
                 </form>
