--- a/user-side/user/complaint/add/index.html
+++ b/user-side/user/complaint/add/index.html
@@ -106,7 +106,7 @@
                         <label for="title">Fine No</label>
                         <input type="text"
                                placeholder=""
-                               id="fine-no" />
+                               id="fineNo" />
                         <i class="fas fa-check-circle"></i>
                         <i class="fas fa-exclamation-circle"></i>
                         <label for="title">Title</label>
