Add submitSignUp() onsubmit in sign up html file

--- a/user-side/user/signup/index.html
+++ b/user-side/user/signup/index.html
@@ -35,7 +35,8 @@
     <div class="wrapper">
         <form id="signup-form"
               class="sign-up"
-              oninput="validateSignUpForm()">
+              oninput="validateSignUpForm()"
+              onsubmit="submitSignup(); return false">
             <p class="title">Sign Up</p>
             <input type="text"
                    id="nic"
@@ -64,8 +65,7 @@
             <!-- <a href="#">Forgot your password?</a><br><br> -->
             Already have an account? <a href="../login/index.html">Login</a>
             <button id="submit-btn"
-                    disabled
-                    onclick="submitSignup()">
+                    disabled>
                 <i class="spinner"></i>
                 <span class="state">Sign Up</span>
             </button>
