--- a/user-side/user/signup/index.html
+++ b/user-side/user/signup/index.html
@@ -63,7 +63,7 @@
                    placeholder="Re Enter Password" />
             <i class="fa-solid fa-key"></i><br>
             <!-- <a href="#">Forgot your password?</a><br><br> -->
-            Already have an account? <a href="../login/index.html">Login</a>
+            Already have an account? <a href="">Login</a>
             <button id="submit-btn"
                     disabled>
                 <i class="spinner"></i>
