--- a/user-side/user/profile/index.html
+++ b/user-side/user/profile/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"
-          href="../fines/main.css">
+          href="./style.css">
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet"
@@ -69,10 +69,7 @@
     </div>
     <!-- REPEATING -->
 
-    <!-- Fines table -->
-    <div class="container">
-        <h1>Profile</h1>
-    </div>
+
 
 </body>
 
