--- a/user-side/user/profile/index.html
+++ b/user-side/user/profile/index.html
@@ -69,7 +69,130 @@
     </div>
     <!-- REPEATING -->
 
+    <body>
 
+        <div class="main-container">
+
+            <!-- LEFT-CONTAINER -->
+            <div class="left-container container">
+                <!-- MENU BOX (LEFT-CONTAINER) -->
+                <div class="menu-box block">
+                    <h2 class="titular">MENU BOX</h2>
+                    <ul class="menu-box-menu">
+                        <li>
+                            <a class="menu-box-tab"
+                               href="#6"><span class="icon fontawesome-envelope scnd-font-color"></span>Messages<div
+                                     class="menu-box-number">24</div></a>
+                        </li>
+                        <li>
+                            <a class="menu-box-tab"
+                               href="#8"><span class="icon entypo-paper-plane scnd-font-color"></span>Invites<div
+                                     class="menu-box-number">3</div></a>
+                        </li>
+                        <li>
+                            <a class="menu-box-tab"
+                               href="#10"><span class="icon entypo-calendar scnd-font-color"></span>Events<div
+                                     class="menu-box-number">5</div></a>
+                        </li>
+                        <li>
+                            <a class="menu-box-tab"
+                               href="#12"><span class="icon entypo-cog scnd-font-color"></span>Account Settings</a>
+                        </li>
+                        <li>
+                            <a class="menu-box-tab"
+                               href="#13">
+                                <sapn class="icon entypo-chart-line scnd-font-color"></sapn>Statistics
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- DONUT CHART BLOCK (LEFT-CONTAINER) -->
+                <div class="donut-chart-block block">
+                    <!-- <h2 class="titular">OS AUDIENCE STATS</h2> -->
+                    <div class="donut-chart">
+                    </div>
+                </div>
+                <!-- LINE CHART BLOCK (LEFT-CONTAINER) -->
+                <div class="line-chart-block block clear">
+                    <div class="line-chart">
+                    </div>
+                    <ul class="time-lenght horizontal-list">
+                    </ul>
+                </div>
+                <!-- SOCIAL (LEFT-CONTAINER) -->
+                <ul class="social horizontal-list block">
+                </ul>
+            </div>
+
+            <!-- MIDDLE-CONTAINER -->
+            <div class="middle-container container">
+                <!-- PROFILE (MIDDLE-CONTAINER) -->
+                <div class="profile block">
+                    <a class="add-button"
+                       href="#28"><span class="icon entypo-plus scnd-font-color"></span></a>
+                    <div class="profile-picture big-profile-picture clear">
+                        <img width="150px"
+                             alt="Anne Hathaway picture"
+                             src="http://upload.wikimedia.org/wikipedia/commons/e/e1/Anne_Hathaway_Face.jpg">
+                    </div>
+                    <h1 class="user-name">Anne Hathaway</h1>
+                    <div class="profile-description">
+                        <p class="scnd-font-color">Lorem ipsum dolor sit amet consectetuer adipiscing</p>
+                    </div>
+                    <ul class="profile-options horizontal-list">
+                        <li><a class="comments"
+                               href="#40">
+                                <p><span class="icon fontawesome-comment-alt scnd-font-color"></span>23</li>
+                        </p></a>
+                        <li><a class="views"
+                               href="#41">
+                                <p><span class="icon fontawesome-eye-open scnd-font-color"></span>841</li>
+                        </p></a>
+                        <li><a class="likes"
+                               href="#42">
+                                <p><span class="icon fontawesome-heart-empty scnd-font-color"></span>49</li>
+                        </p></a>
+                    </ul>
+                </div>
+
+                <!-- RIGHT-CONTAINER -->
+                <div class="right-container container">
+                    <div class="menu-box block">
+                        <h2 class="titular">MENU BOX</h2>
+                        <ul class="menu-box-menu">
+                            <li>
+                                <a class="menu-box-tab"
+                                   href="#6"><span class="icon fontawesome-envelope scnd-font-color"></span>Messages<div
+                                         class="menu-box-number">24</div></a>
+                            </li>
+                            <li>
+                                <a class="menu-box-tab"
+                                   href="#8"><span class="icon entypo-paper-plane scnd-font-color"></span>Invites<div
+                                         class="menu-box-number">3</div></a>
+                            </li>
+                            <li>
+                                <a class="menu-box-tab"
+                                   href="#10"><span class="icon entypo-calendar scnd-font-color"></span>Events<div
+                                         class="menu-box-number">5</div></a>
+                            </li>
+                            <li>
+                                <a class="menu-box-tab"
+                                   href="#12"><span class="icon entypo-cog scnd-font-color"></span>Account Settings</a>
+                            </li>
+                            <li>
+                                <a class="menu-box-tab"
+                                   href="#13">
+                                    <sapn class="icon entypo-chart-line scnd-font-color"></sapn>Statistics
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- end right-container -->
+            </div>
+            <!-- end main-container -->
+        </div>
+    </body>
 
 </body>
 
