--- a/user-side/user/profile/index.html
+++ b/user-side/user/profile/index.html
@@ -107,21 +107,21 @@
                     </ul>
                 </div>
                 <!-- DONUT CHART BLOCK (LEFT-CONTAINER) -->
-                <div class="donut-chart-block block">
-                    <!-- <h2 class="titular">OS AUDIENCE STATS</h2> -->
+                <!-- <div class="donut-chart-block block">
+                    <h2 class="titular">OS AUDIENCE STATS</h2>
                     <div class="donut-chart">
                     </div>
-                </div>
+                </div> -->
                 <!-- LINE CHART BLOCK (LEFT-CONTAINER) -->
-                <div class="line-chart-block block clear">
+                <!-- <div class="line-chart-block block clear">
                     <div class="line-chart">
                     </div>
                     <ul class="time-lenght horizontal-list">
                     </ul>
-                </div>
+                </div> -->
                 <!-- SOCIAL (LEFT-CONTAINER) -->
-                <ul class="social horizontal-list block">
-                </ul>
+                <!-- <ul class="social horizontal-list block">
+                </ul> -->
             </div>
 
             <!-- MIDDLE-CONTAINER -->
@@ -139,7 +139,37 @@
                     <div class="profile-description">
                         <p class="scnd-font-color">Lorem ipsum dolor sit amet consectetuer adipiscing</p>
                     </div>
-                    <ul class="profile-options horizontal-list">
+                    <!-- <div class="menu-box block">
+                        <h2 class="titular">MENU BOX</h2>
+                        <ul class="menu-box-menu">
+                            <li>
+                                <a class="menu-box-tab"
+                                   href="#6"><span class="icon fontawesome-envelope scnd-font-color"></span>Messages<div
+                                         class="menu-box-number">24</div></a>
+                            </li>
+                            <li>
+                                <a class="menu-box-tab"
+                                   href="#8"><span class="icon entypo-paper-plane scnd-font-color"></span>Invites<div
+                                         class="menu-box-number">3</div></a>
+                            </li>
+                            <li>
+                                <a class="menu-box-tab"
+                                   href="#10"><span class="icon entypo-calendar scnd-font-color"></span>Events<div
+                                         class="menu-box-number">5</div></a>
+                            </li>
+                            <li>
+                                <a class="menu-box-tab"
+                                   href="#12"><span class="icon entypo-cog scnd-font-color"></span>Account Settings</a>
+                            </li>
+                            <li>
+                                <a class="menu-box-tab"
+                                   href="#13">
+                                    <sapn class="icon entypo-chart-line scnd-font-color"></sapn>Statistics
+                                </a>
+                            </li>
+                        </ul>
+                    </div> -->
+                    <!-- <ul class="profile-options horizontal-list">
                         <li><a class="comments"
                                href="#40">
                                 <p><span class="icon fontawesome-comment-alt scnd-font-color"></span>23</li>
@@ -152,7 +182,7 @@
                                href="#42">
                                 <p><span class="icon fontawesome-heart-empty scnd-font-color"></span>49</li>
                         </p></a>
-                    </ul>
+                    </ul> -->
                 </div>
 
                 <!-- RIGHT-CONTAINER -->
