Add image to dashboard heading panel

--- a/user-side/user/profile/index.html
+++ b/user-side/user/profile/index.html
@@ -59,19 +59,63 @@
         </ul>
     </div>
 
+    <!-- <div class="profile-menu">
+        <p>Me <a href="#26"><span class="entypo-down-open scnd-font-color"></span></a></p>
+        <div class="profile-picture small-profile-picture">
+            <img width="40px"
+                 alt="Anne Hathaway picture"
+                 src="http://upload.wikimedia.org/wikipedia/commons/e/e1/Anne_Hathaway_Face.jpg">
+        </div> -->
+
     <!-- Dashboard heading -->
     <div class="dashboard-heading">
+        <p>Me <a href="#26"><span class="entypo-down-open scnd-font-color"></span></a></p>
         <div class="panel">
-            <div>
-                <p class="profile-username">Avishi Ganepola</p>
+            <div class="profile-picture small-profile-picture">
+                <!-- <p class="profile-username">Avishi Ganepola</p> -->
+                <img width="40px"
+                     alt="Anne Hathaway picture"
+                     src="http://upload.wikimedia.org/wikipedia/commons/e/e1/Anne_Hathaway_Face.jpg">
             </div>
         </div>
+    </div>
     </div>
     <!-- REPEATING -->
 
     <body>
 
         <div class="main-container">
+            <!-- HEADER -->
+            <!-- <header class="block">
+                <ul class="header-menu horizontal-list">
+                    <li>
+                        <a class="header-menu-tab"
+                           href="#1"><span class="icon entypo-cog scnd-font-color"></span>Settings</a>
+                    </li>
+                    <li>
+                        <a class="header-menu-tab"
+                           href="#2"><span class="icon fontawesome-user scnd-font-color"></span>Account</a>
+                    </li>
+                    <li>
+                        <a class="header-menu-tab"
+                           href="#3"><span class="icon fontawesome-envelope scnd-font-color"></span>Messages</a>
+                        <a class="header-menu-number"
+                           href="#4">5</a>
+                    </li>
+                    <li>
+                        <a class="header-menu-tab"
+                           href="#5"><span class="icon fontawesome-star-empty scnd-font-color"></span>Favorites</a>
+                    </li>
+                </ul>
+                <div class="profile-menu">
+                    <p>Me <a href="#26"><span class="entypo-down-open scnd-font-color"></span></a></p>
+                    <div class="profile-picture small-profile-picture">
+                        <img width="40px"
+                             alt="Anne Hathaway picture"
+                             src="http://upload.wikimedia.org/wikipedia/commons/e/e1/Anne_Hathaway_Face.jpg">
+                    </div>
+                </div>
+            </header> -->
 
             <!-- LEFT-CONTAINER -->
             <div class="left-container container">
@@ -192,13 +236,15 @@
                         <ul class="menu-box-menu">
                             <li>
                                 <a class="menu-box-tab"
-                                   href="#6"><span class="icon fontawesome-envelope scnd-font-color"></span>Messages<div
-                                         class="menu-box-number">24</div></a>
+                                   href="#6"><span class="icon fontawesome-envelope scnd-font-color"></span>Messages
+                                    <div class="menu-box-number">24</div>
+                                </a>
                             </li>
                             <li>
                                 <a class="menu-box-tab"
-                                   href="#8"><span class="icon entypo-paper-plane scnd-font-color"></span>Invites<div
-                                         class="menu-box-number">3</div></a>
+                                   href="#8"><span class="icon entypo-paper-plane scnd-font-color"></span>Invites
+                                    <div class="menu-box-number">3</div>
+                                </a>
                             </li>
                             <li>
                                 <a class="menu-box-tab"
@@ -207,7 +253,8 @@
                             </li>
                             <li>
                                 <a class="menu-box-tab"
-                                   href="#12"><span class="icon entypo-cog scnd-font-color"></span>Account Settings</a>
+                                   href="#12"><span class="icon entypo-cog scnd-font-color"></span>Account
+                                    Settings</a>
                             </li>
                             <li>
                                 <a class="menu-box-tab"
