--- a/user-side/user/profile/index.html
+++ b/user-side/user/profile/index.html
@@ -59,20 +59,12 @@
         </ul>
     </div>
 
-    <!-- <div class="profile-menu">
-        <p>Me <a href="#26"><span class="entypo-down-open scnd-font-color"></span></a></p>
-        <div class="profile-picture small-profile-picture">
-            <img width="40px"
-                 alt="Anne Hathaway picture"
-                 src="http://upload.wikimedia.org/wikipedia/commons/e/e1/Anne_Hathaway_Face.jpg">
-        </div> -->
-
     <!-- Dashboard heading -->
     <div class="dashboard-heading">
-        <p>Me <a href="#26"><span class="entypo-down-open scnd-font-color"></span></a></p>
         <div class="panel">
             <div class="profile-picture small-profile-picture">
-                <!-- <p class="profile-username">Avishi Ganepola</p> -->
+                <p class="profile-username">Avishi Ganepola</p>
+                <!-- <p>Me <a href="#26"><span class="entypo-down-open scnd-font-color"></span></a></p> -->
                 <img width="40px"
                      alt="Anne Hathaway picture"
                      src="http://upload.wikimedia.org/wikipedia/commons/e/e1/Anne_Hathaway_Face.jpg">
@@ -85,37 +77,6 @@
     <body>
 
         <div class="main-container">
-            <!-- HEADER -->
-            <!-- <header class="block">
-                <ul class="header-menu horizontal-list">
-                    <li>
-                        <a class="header-menu-tab"
-                           href="#1"><span class="icon entypo-cog scnd-font-color"></span>Settings</a>
-                    </li>
-                    <li>
-                        <a class="header-menu-tab"
-                           href="#2"><span class="icon fontawesome-user scnd-font-color"></span>Account</a>
-                    </li>
-                    <li>
-                        <a class="header-menu-tab"
-                           href="#3"><span class="icon fontawesome-envelope scnd-font-color"></span>Messages</a>
-                        <a class="header-menu-number"
-                           href="#4">5</a>
-                    </li>
-                    <li>
-                        <a class="header-menu-tab"
-                           href="#5"><span class="icon fontawesome-star-empty scnd-font-color"></span>Favorites</a>
-                    </li>
-                </ul>
-                <div class="profile-menu">
-                    <p>Me <a href="#26"><span class="entypo-down-open scnd-font-color"></span></a></p>
-                    <div class="profile-picture small-profile-picture">
-                        <img width="40px"
-                             alt="Anne Hathaway picture"
-                             src="http://upload.wikimedia.org/wikipedia/commons/e/e1/Anne_Hathaway_Face.jpg">
-                    </div>
-                </div>
-            </header> -->
 
             <!-- LEFT-CONTAINER -->
             <div class="left-container container">
@@ -150,22 +111,6 @@
                         </li>
                     </ul>
                 </div>
-                <!-- DONUT CHART BLOCK (LEFT-CONTAINER) -->
-                <!-- <div class="donut-chart-block block">
-                    <h2 class="titular">OS AUDIENCE STATS</h2>
-                    <div class="donut-chart">
-                    </div>
-                </div> -->
-                <!-- LINE CHART BLOCK (LEFT-CONTAINER) -->
-                <!-- <div class="line-chart-block block clear">
-                    <div class="line-chart">
-                    </div>
-                    <ul class="time-lenght horizontal-list">
-                    </ul>
-                </div> -->
-                <!-- SOCIAL (LEFT-CONTAINER) -->
-                <!-- <ul class="social horizontal-list block">
-                </ul> -->
             </div>
 
             <!-- MIDDLE-CONTAINER -->
@@ -183,50 +128,6 @@
                     <div class="profile-description">
                         <p class="scnd-font-color">Lorem ipsum dolor sit amet consectetuer adipiscing</p>
                     </div>
-                    <!-- <div class="menu-box block">
-                        <h2 class="titular">MENU BOX</h2>
-                        <ul class="menu-box-menu">
-                            <li>
-                                <a class="menu-box-tab"
-                                   href="#6"><span class="icon fontawesome-envelope scnd-font-color"></span>Messages<div
-                                         class="menu-box-number">24</div></a>
-                            </li>
-                            <li>
-                                <a class="menu-box-tab"
-                                   href="#8"><span class="icon entypo-paper-plane scnd-font-color"></span>Invites<div
-                                         class="menu-box-number">3</div></a>
-                            </li>
-                            <li>
-                                <a class="menu-box-tab"
-                                   href="#10"><span class="icon entypo-calendar scnd-font-color"></span>Events<div
-                                         class="menu-box-number">5</div></a>
-                            </li>
-                            <li>
-                                <a class="menu-box-tab"
-                                   href="#12"><span class="icon entypo-cog scnd-font-color"></span>Account Settings</a>
-                            </li>
-                            <li>
-                                <a class="menu-box-tab"
-                                   href="#13">
-                                    <sapn class="icon entypo-chart-line scnd-font-color"></sapn>Statistics
-                                </a>
-                            </li>
-                        </ul>
-                    </div> -->
-                    <!-- <ul class="profile-options horizontal-list">
-                        <li><a class="comments"
-                               href="#40">
-                                <p><span class="icon fontawesome-comment-alt scnd-font-color"></span>23</li>
-                        </p></a>
-                        <li><a class="views"
-                               href="#41">
-                                <p><span class="icon fontawesome-eye-open scnd-font-color"></span>841</li>
-                        </p></a>
-                        <li><a class="likes"
-                               href="#42">
-                                <p><span class="icon fontawesome-heart-empty scnd-font-color"></span>49</li>
-                        </p></a>
-                    </ul> -->
                 </div>
 
                 <!-- RIGHT-CONTAINER -->
